Fixed column spacing

--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ ul {
 .article-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .project-section {
